@@ -795,6 +795,9 @@
 	  include paths for Cygwin-based GCC were being converted to windows
 	  native paths.  That causes many problems -- breaking dependencies
 	  for one.
+	* Fixed an important bug in ROMFS.  The initial XIP offset was set
+	  incorrectly so if sector zero was read first, there was a bad read.
+	  I don't know how it worked before.
 
 
 
